fix CI CD